tests/valid_inputs/class_method_overload_definition.cpp

struct S {
	int foo() {return 1;}
	int foo(int a) {return 62; }
};

int main() {

}
