tests/invalid_inputs/sema/class_redefine_this.cpp

struct S {
	void foo(S * other) {this = other;}
}
